Added facility code into the report. Updated tests.

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -21,7 +21,7 @@
       <td colspan="12" style="text-align: center;"><strong>Malaria Case Investigators Report</strong></td>
     </tr>
     <tr>
-      <td colspan="4" style="width: 33%">Case Number: <span class="variable">{{case.pk}}</span></td>
+      <td colspan="4" style="width: 33%">Case Number: <span class="variable">{{case.pk}}</span><br/>Reporting facility: <span class="variable">{{case.facility_code}}</span></td>
       <td colspan="4" style="width: 33%; text-align: center;"><img style="width: 10em;margin-left: auto; margin-right:auto;" src="logo.png"/></td>
       <td colspan="4" style="width: 33%">Date Form Received for data capturing: <span class="variable">{{case.create_date_time}}</span</td>
     </tr>
@@ -36,7 +36,7 @@
       <td colspan="6">2b. Surname: <span class="variable">{{case.last_name}}</span></td>
     </tr>
     <tr>
-      <td colspan="4">3. Age: <span class="variable">{{case.}}</span></td>
+      <td colspan="4">3. Age: <span class="variable">{{case}}</span></td>
       <td colspan="4">4. Date of birth: <span class="variable">{{case.date_of_birth}}</span></td>
       <td colspan="4">5. Gender: <span class="variable">{{case.gender}}</span></td>
     </tr>
