--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -36,7 +36,7 @@
       <td colspan="6">2b. Surname: <span class="variable">{{case.last_name}}</span></td>
     </tr>
     <tr>
-      <td colspan="4">3. Age: <span class="variable">{{case}}</span></td>
+      <td colspan="4">3. Age: <span class="variable">{{case.age}}</span></td>
       <td colspan="4">4. Date of birth: <span class="variable">{{case.date_of_birth}}</span></td>
       <td colspan="4">5. Gender: <span class="variable">{{case.gender}}</span></td>
     </tr>
