--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -41,16 +41,16 @@
       <td colspan="4">5. Gender: <span class="variable">{{case.gender}}</span></td>
     </tr>
     <tr>
-      <td colspan="6">6. Reporting Health Facility: <span class="variable">{{case.last_name}}</span></td>
-      <td colspan="6">7. Province: <span class="variable">{{case.last_name}}</span></td>
+      <td colspan="6">6. Reporting Health Facility: <span class="variable">{{facility.facility_name}}</span></td>
+      <td colspan="6">7. Province: <span class="variable">{{facility.province}}</span></td>
     </tr>
     <tr>
-      <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable">{{case.last_name}}</span></td>
-      <td colspan="6">9. Date notification form captured in MIS: <span class="variable">{{case.last_name}}</span></td>
+      <td colspan="6">8. Date notification form was sent/collected from health facility: </td>
+      <td colspan="6">9. Date notification form captured in MIS: </td>
     </tr>
     <tr>
       <td colspan="6">10. Treatment given to patient: </td>
-      <td colspan="6">11. South African ID: <span class="variable">{{case.last_name}}</span></td>
+      <td colspan="6">11. South African ID: <span class="variable">{{case.sa_id_number}}</span></td>
     </tr>
     <tr>
       <td colspan="12" class="section_heading">Section B: Case Investigator Detail & Investigation Address</td>
