--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -46,7 +46,7 @@
     </tr>
     <tr>
       <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable">{{case.create_date_time|date:"D d M Y" }} {{case.create_date_time|date:"H:i"}}</span></td>
-      <td colspan="6">9. Date notification form captured in MIS: <span class="variable">{{case.created_at|date:"D d M Y" }} {{case.created_at|date:"H:i"}}</span></td>
+      <td colspan="6">9. Date notification form captured in MIS: <span class="variable"></span></td>
     </tr>
     <tr>
       <td colspan="6">10. Treatment given to patient: </td>
