populate municipality & district fields

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -41,8 +41,8 @@
       <td colspan="4">5. Gender: <span class="variable">{{case.gender}}</span></td>
     </tr>
     <tr>
-      <td colspan="6">6. Reporting Health Facility: <span class="variable">{{case.facility_name}}</span></td>
-      <td colspan="6">7. Province: <span class="variable">{{case.province}}</span></td>
+      <td colspan="6">6. Reporting Health Facility: <span class="variable">{{case.facility_names}}</span></td>
+      <td colspan="6">7. Province: <span class="variable">{{case.provinces}}</span></td>
     </tr>
     <tr>
       <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable">{{case.create_date_time|date:"D d M Y" }} {{case.create_date_time|date:"H:i"}}</span></td>
@@ -63,10 +63,10 @@
     </tr>
     <tr>
       <td colspan="6">4b. Locality / village: <span class="variable">{{case.locality}}</span></td>
-      <td colspan="6">4c. Municipality: <span class="variable">{{case.municipality}}</span></td>
+      <td colspan="6">4c. Municipality: <span class="variable">{{case.subdistricts}}</span></td>
     </tr>
     <tr>
-      <td colspan="6">4d. District: <span class="variable">{{case.}}</span></td>
+      <td colspan="6">4d. District: <span class="variable">{{case.districts}}</span></td>
       <td colspan="6">5. Patient's contact number: <span class="variable">{{case.msisdn}}</span></td>
     </tr>
     <tr>
