add landmark + description to the email report

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -59,7 +59,7 @@
       <td colspan="12">4a. Exact residential address (include name of area / section / zone / homestead number) where the patient was visited by the case investigator</td>
     </tr>
     <tr>
-      <td colspan="12">&nbsp;</td>
+      <td colspan="12">{{case.landmark}} / {{case.landmark_description}}</td>
     </tr>
     <tr>
       <td colspan="6">4b. Locality / village: <span class="variable">{{case.locality}}</span></td>
