fix diagnosis date format

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -29,7 +29,7 @@
       <td colspan="12" class="section_heading">Section A: General information on case to be investigated</td>
     </tr>
     <tr>
-      <td colspan="12">1. Diagnosis Date: <span class="variable">{{case.create_date_time}}</span></td>
+      <td colspan="12">1. Diagnosis Date: <span class="variable">{{case.create_date_time|date:"Y-m-d"}}</span></td>
     </tr>
     <tr>
       <td colspan="6">2a. Patient's Name: <span class="variable">{{case.first_name}}</span></td>
