--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -29,7 +29,7 @@
       <td colspan="12" class="section_heading">Section A: General information on case to be investigated</td>
     </tr>
     <tr>
-      <td colspan="12">1. Diagnosis Date: <span class="variable"><strong>{{case.create_date_tim</strong>e|date:"Y-m-d"}}</span></td>
+      <td colspan="12">1. Diagnosis Date: <span class="variable"><strong>{{case.create_date_time|date:"Y-m-d"}}</strong></span></td>
     </tr>
     <tr>
       <td colspan="6">2a. Patient's Name: <span class="variable"><strong>{{case.first_name}}</strong></span></td>
@@ -45,8 +45,8 @@
       <td colspan="6">7. Province: <span class="variable"><strong>{{case.provinces}}</strong></span></td>
     </tr>
     <tr>
-      <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable"><strong>{{case.create_date_tim</strong>e|date:"D d M Y" }} {{case.create_date_time|date:"H:i"}}</span></td>
-      <td colspan="6">9. Date notification form captured in MIS: <span class="variable"><strong></span></t</strong>d>
+      <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable"><strong>{{case.create_date_time|date:"D d M Y" }} {{case.create_date_time|date:"H:i"}}</strong></span></td>
+      <td colspan="6">9. Date notification form captured in MIS: <span class="variable"></span></td>
     </tr>
     <tr>
       <td colspan="6">10. Treatment given to patient: </td>
@@ -73,7 +73,7 @@
       <td colspan="12">6. GPS coordinates:</td>
     </tr>
     <tr>
-      <td colspan="12">7. Source of case investigation information: <span class="variable"><strong>MalariaConnect</span></</strong>td>
+      <td colspan="12">7. Source of case investigation information: <span class="variable"><strong>MalariaConnect</strong></span>td>
     </tr>
     <tr>
       <td colspan="12">8. Where did the person travel to? <span class="variable"><strong>{{case.abroad}}</strong></span></td>
