--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -73,7 +73,7 @@
       <td colspan="12">6. GPS coordinates:</td>
     </tr>
     <tr>
-      <td colspan="12">7. Source of case investigation information: <span class="variable"><strong>MalariaConnect</strong></span>td>
+      <td colspan="12">7. Source of case investigation information: <span class="variable"><strong>MalariaConnect</strong></span></td>
     </tr>
     <tr>
       <td colspan="12">8. Where did the person travel to? <span class="variable"><strong>{{case.abroad}}</strong></span></td>
