update MalariaConnect case number copy

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -21,12 +21,12 @@
       <td colspan="12" style="text-align: center;"><strong>Malaria Case Investigators Report</strong></td>
     </tr>
     <tr>
-      <td colspan="4" style="width: 33%">Case Number: <span class="variable"><strong>{{case.case_number}}</strong></span><br/>Reporting facility: <span class="variable"><strong>{{case.facility_code}}</strong></span></td>
+      <td colspan="4" style="width: 33%">Case Number: </td>
       <td colspan="4" style="width: 33%; text-align: center;"><img style="width: 10em;margin-left: auto; margin-right:auto;" src="http://{{site.domain}}{% static "ona/img/logo.png" %}"/></td>
       <td colspan="4" style="width: 33%">Date Form Received for data capturing:</td>
     </tr>
     <tr>
-      <td colspan="4"></td>
+      <td colspan="4" style="width: 33%">MalariaConnect Case Number: <span class="variable"><strong>{{case.case_number}}</strong></span><br/>Reporting facility: <span 
       <td colspan="4"></td>
       <td colspan="4" style="width: 33%">Date MalariaConnect Report received: <span class="variable"><strong>{{case.create_date_time}}</strong></span</td>
     </tr>
