added html that got left out

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -26,7 +26,7 @@
       <td colspan="4" style="width: 33%">Date Form Received for data capturing:</td>
     </tr>
     <tr>
-      <td colspan="4" style="width: 33%">MalariaConnect Case Number: <span class="variable"><strong>{{case.case_number}}</strong></span><br/>Reporting facility: <span 
+      <td colspan="4" style="width: 33%">MalariaConnect Case Number: <span class="variable"><strong>{{case.case_number}}</strong></span><br/>Reporting facility: <span class="variable"><strong>{{case.facility_code}}</strong></span></td>
       <td colspan="4"></td>
       <td colspan="4" style="width: 33%">Date MalariaConnect Report received: <span class="variable"><strong>{{case.create_date_time}}</strong></span</td>
     </tr>
