--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -44,7 +44,10 @@
     </tr>
     <tr>
       <td colspan="6">6. Reporting Health Facility: <span class="variable"><strong>{{case.facility_names}}</strong></span></td>
-      <td colspan="6">7. Province: <span class="variable"><strong>{{case.provinces}}</strong></span></td>
+      <td colspan="6">Facility Code: <span class="variable"><strong>{{case.facility_code}}</strong></span></td>
+    </tr>
+    <tr>
+      <td colspan="12">7. Province: <span class="variable"><strong>{{case.provinces}}</strong></span></td>
     </tr>
     <tr>
       <td colspan="6">8. Date notification form was sent/collected from health facility: <span class="variable"><strong>{{case.create_date_time|date:"D d M Y" }} {{case.create_date_time|date:"H:i"}}</strong></span></td>
