--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -47,7 +47,8 @@
       <td colspan="6">Facility Code: <span class="variable"><strong>{{case.facility_code}}</strong></span></td>
     </tr>
     <tr>
-      <td colspan="12">7. Province: <span class="variable"><strong>{{case.provinces}}</strong></span></td>
+      <td colspan="6">7. Province: <span class="variable"><strong>{{case.provinces}}</strong></span></td>
+      <td colspan="6">District: <span class="variable"><strong>{{case.districts}}</strong></span></td>
     </tr>
     <tr>
       <td colspan="12">11. South African ID: <span class="variable"><strong>{{case.sa_id_number}}</strong></span></td>
