added method to get ci for case and included that in email

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -57,6 +57,9 @@
       <td colspan="12" class="section_heading">Section B: Case Investigator Detail &amp; Investigation Address</td>
     </tr>
     <tr>
+      <td colspan="12">Name of Case Investigator: <span class="variable"><strong>{{ci.name}}</strong></span></td>
+    </tr>
+    <tr>
       <td colspan="12">4a. Exact residential address (include name of area / section / zone / homestead number) where the patient was visited by the case investigator</td>
     </tr>
     <tr>
