changed email copy

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -60,7 +60,7 @@
       <td colspan="12">Name of Case Investigator: <span class="variable"><strong>{{ci.name}}</strong></span></td>
     </tr>
     <tr>
-      <td colspan="12">4a. Exact residential address (include name of area / section / zone / homestead number) where the patient was visited by the case investigator</td>
+      <td colspan="12">Landmark nearby patient's residential address</td>
     </tr>
     <tr>
       <td colspan="12"><span class="variable"><strong>{{case.landmark}} / {{case.landmark_description}}</strong><span></td>
