--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -77,36 +77,7 @@
       <td colspan="12">7. Source of case investigation information: <span class="variable"><strong>MalariaConnect</strong></span></td>
     </tr>
     <tr>
-      <td colspan="12">8. Where did the person travel to? <span class="variable"><strong>{{case.abroad}}</strong></span></td>
-    </tr>
-    <tr>
-      <td colspan="12"><table border="1" cellspacing="0" style="width: 100%; border-color: #DEDFDE;">
-        <tr>
-          <th>Country / Province visited</th>
-          <th>0-7 days before falling ill</th>
-          <th>8-21 days before falling ill</th>
-          <th>22-365 days before falling ill</th>
-
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-          <td>&nbsp;</td>
-        </tr>
-      </table></td>
+      <td colspan="12">Where did the patient travel 21 days before falling ill? <span class="variable"><strong>{{case.abroad}}</strong></span></td>
     </tr>
 
   </table>
