--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -57,10 +57,11 @@
       <td colspan="12" class="section_heading">Section B: Case Investigator Detail &amp; Investigation Address</td>
     </tr>
     <tr>
-      <td colspan="12">Name of Case Investigator: <span class="variable"><strong>{{ci.name}}</strong></span></td>
+      <td colspan="6">Name of EHP:</td>
+      <td colspan="6">Name of Case Investigator:</td>
     </tr>
     <tr>
-      <td colspan="12">Landmark nearby patient's residential address</td>
+      <td colspan="12">Landmark nearby patient's residential address:</td>
     </tr>
     <tr>
       <td colspan="12"><span class="variable"><strong>{{case.landmark}} / {{case.landmark_description}}</strong><span></td>
