added uppercase property to css

--- a/malaria24/ona/templates/ona/html_email.html
+++ b/malaria24/ona/templates/ona/html_email.html
@@ -4,6 +4,7 @@
       color: red;
       font-weight: strong;
       font-family: courier;
+      text-transform: uppercase;
     }
     .section_heading {
       background-color: #DEDFDE;
